--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   uuid: ^3.0.4
   permission_handler: ^7.1.0
   flutter_baidu_mapapi_base:
-    git: https://github.com/lizubing1992/flutter_baidu_mapapi_base.git
+    git: https://gitee.com/masterksy/flutter_baidu_mapapi_base.git
     #path: ../flutter_baidu_mapapi_base/
 
 dev_dependencies:
